styles.css
@font-face {
  font-family: "sigmar-regular";
  src: url("assets/Rubik-VariableFont_wght.ttf");
  font-weight: 900;
  font-style: normal;
}

body {
  color: #e9dabd;
  background-image: url("/assets/Untitled_Artwork.webp");
  background-size: 100% 100%;
  background-repeat: no-repeat;
  background-attachment: fixed;
  height: 100vh;
  overflow: hidden;
  font-family: sigmar-regular, Impact, "Arial Narrow Bold", sans-serif;
}

h1 {
  -webkit-text-stroke: 2px #684e1b;
  font-size: 100px;
  letter-spacing: 3px;
  margin: 0;
}

h2 {
  -webkit-text-stroke: 2px #684e1b;
  font-size: 50px;
  margin: 0;
}
h3 {
  -webkit-text-stroke: 1px #684e1b;
  font-size: 45px;
  letter-spacing: 2px;
  margin: 0;
}
p {
  margin: 0 100px;
  font-size: 25px;
  -webkit-text-stroke: 1px #684e1b;
  letter-spacing: 2px;
}
button {
  display: block;
  font-family: sigmar-regular, Impact, "Arial Narrow Bold", sans-serif;
  font-size: 30px;
  letter-spacing: 2px;
  color: #4c4027;
  background-color: #e9dabd;
  border: 4px solid #4c4027;
  border-radius: 10px;
  margin: 0 auto;
  margin-bottom: 15px;
  width: 350px;
  padding: 10px 0;
  transition: all 200ms ease-in-out;
}

button:hover {
  cursor: pointer;
  filter: brightness(0.7);
}

.score-box {
  display: flex;
  justify-content: space-between;
  background-color: #684e1b;
  border: 5px solid #4c4027;
  border-radius: 5px;
  padding: 0 10px;
}

.bird-img {
  width: 320px;
  height: 240px;
  display: block;
  margin: 50px auto;
  padding: 15px;
  background-color: #e9dabd;
  border: 5px solid #4c4027;
  border-radius: 5px;
}
.game-page-title {
  margin-left: 140px;
}

.options-container {
  display: block;
}
.options-container button {
  width: 300px;
  height: 100px;
  padding: 10px 0;
  margin: 10px;
}
.options-row {
  display: flex;
  justify-content: center;
}
.credits-section a {
  color: #684e1b;
}

.game-page {
  padding: 10px 50px;
}
.start-page,
.game-over {
  padding: 50px 50px;
}
.game-name-heading,
.game-over-heading {
  text-align: center;
}
.highscore,
.final-score {
  text-align: center;
}
.btn-container {
  position: relative;
  top: 100px;
}
.exit-about-btn {
  position: absolute;
  font-size: 20px;
  width: 200px;
  left: 50px;
}
.about-and-credits {
  margin: 50px auto;
  max-width: 60vw;
  text-align: center;
  height: 100vh;
  overflow: hidden;
  box-sizing: border-box;
  padding: 20px 50px;
}

.about-and-credits h2 {
  margin-bottom: 15px;
}

.about-and-credits div {
  margin-bottom: 50px;
  background-color: #e9dabd5d;
  border-radius: 20px;
  padding: 25px 0;
}
.about-and-credits p {
  font-size: 20px;
}

.modal {
  text-align: center;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  height: 30vh;
  width: 100vw;
  max-width: 600px;
  background: #e9dabd9e;
  border-radius: 10px;
  padding: 30px;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);

  display: flex;
  flex-direction: column;
}
.modal h2 {
  -webkit-text-stroke: 2px rgba(57, 57, 57, 0.607);
  font-size: 50px;
  margin: 0 0 10px 0;
}
.modal p {
  font-size: 25px;
  margin: 10px 20px 20px 20px;
  line-height: 1.2;
}

.next-bird-btn,
.game-over-btn {
  font-size: 20px;
  width: fit-content;
  padding: 10px 20px;
  margin: auto auto 0 auto;
}

.hidden {
  display: none;
}

